--- a/problems/warmup_5_18_2018.tex
+++ b/problems/warmup_5_18_2018.tex
@@ -1,10 +1,7 @@
 \include{base}
 
-% ********************** Settings *************************
-\newcommand{\problemsetTitle}{Warmup Problems}
-\newcommand{\problemsetSubheader}{SLSS Computer Science Club}
-\newcommand{\problemsetDate}{May 18, 2018}
-\newcommand{\problemsetAuthor}{Shon Verch}
+\initSettings{Warmup Problems}{SLSS Computer Science Club}
+             {May 18, 2018}{Shon Verch}
 
 \begin{document}
 
