Added April 13 homework

--- a/problems/base.tex
+++ b/problems/base.tex
@@ -19,6 +19,7 @@
 \usepackage{amssymb}    % Math symbols such as \mathbb
 \usepackage{amsmath}
     
+\usepackage{interval}
     
 % ************* Problem formatting helpers ****************
 \newlength{\rulelength}
