Moved problem sets to problem folder

--- a/problems/problems/homework_4_13_2018.tex
+++ b/problems/problems/homework_4_13_2018.tex
@@ -4,6 +4,7 @@
              {April 13, 2018}{Shon Verch}
 
 \begin{document}
+\makeHeader
 
 \section{The Admissions Panel}
 At Ivy League University, the admissions panel consists of 7 highly-skilled mathematicians. In a goal to preserve the mathematics culture of the university, the panel has devised a process to assess the mathematical capabilities of applicants.
