--- a/problems/warmup_4_20_2018.tex
+++ b/problems/warmup_4_20_2018.tex
@@ -1,10 +1,12 @@
-\include{base}
+\documentclass{problem-set}
 
-\initSettings{Warmup Problems}{SLSS Computer Science Club}
-             {April 20, 2018}{Shon Verch}
+\title{Warmup Problems}
+\subheader{SLSS Computer Science Club}
+\date{April 20, 2018}
+\author{Shon Verch}
 
 \begin{document}
-\makeHeader
+\maketitle
 
 \section{Multiples of 3 and 5}
 If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. The sum of these multiples is 23.
