--- a/problems/warmup_5_11_2018.tex
+++ b/problems/warmup_5_11_2018.tex
@@ -1,10 +1,12 @@
-\include{base}
+\documentclass{problem-set}
 
-\initSettings{Warmup Problems}{SLSS Computer Science Club}
-             {May 11, 2018}{Shon Verch}
+\title{Warmup Problems}
+\subheader{SLSS Computer Science Club}
+\date{May 11, 2018}
+\author{Shon Verch}
 
 \begin{document}
-\makeHeader
+\maketitle
 
 \section{Garden of Triangles}
 On his trip to the Italian region of Tuscany, Mr. Lane encountered an interesting Renaissance-era garden where a sacred religious ceremony used to take place. During the ceremony, there would be $n$ stones scattered around the garden. Each stone has a coordinate $(x,y)$ where $x$ can either be $1$, $2$, or $3$. The priests would then choose every triplet of these $n$ points and make a triangle from it. 
