--- a/problems/warmup_5_18_2018.tex
+++ b/problems/warmup_5_18_2018.tex
@@ -1,10 +1,12 @@
-\include{base}
+\documentclass{problem-set}
 
-\initSettings{Warmup Problems}{SLSS Computer Science Club}
-             {May 18, 2018}{Shon Verch}
+\title{Warmup Problems}
+\subheader{SLSS Computer Science Club}
+\date{May 18, 2018}
+\author{Shon Verch}
 
 \begin{document}
-\makeHeader
+\maketitle
 
 \section{Find the Missing Number}
 The set $S = \{x \in \mathbb{Z} \mid 0 \le x < n\}$ has one missing number. Given the set, find the missing number which makes the set $S$ complete.
