--- a/lessons/lesson_summations.tex
+++ b/lessons/lesson_summations.tex
@@ -27,12 +27,11 @@ it is impossible for us to complete the sum because the present terms give no wa
 
 Often, we will also want to write sums of large expressions. Using the expanded notation can yield very large and
 ugly expressions. Consider the sum of the expression $x^2+x$ where $1 \leq x \leq 5$:
-\begin{equation}
+\begin{equation*}
     S=(1^2+1)+(2^2+2)+(3^2+3)+(4^2+4)+(5^2+5).
-    \label{eq:verbose_sum_expression}
-\end{equation}
+\end{equation*}
 
-Obviously, equation \ref{eq:verbose_sum_expression} is undesirable in real mathematics because it is much too verbose and space-consuming.
+Obviously, this is undesirable in real mathematics because it is much too verbose and space-consuming.
 Instead, we need a terser shorthand notation for expressing sums. The \textit{summation} notation provides a convenient and powerful tool for 
 expressing and manipulating sums. This lesson develops the notation and introduces general techniques, formulas, and properties.
 
