--- a/lessons/cslesson.cls
+++ b/lessons/cslesson.cls
@@ -2,6 +2,7 @@
 \ProvidesClass{cslesson}
 \LoadClass{article}
 
+\RequirePackage{enumitem}
 \RequirePackage[fleqn]{amsmath}
 % \RequirePackage[parfill]{parskip}
 \RequirePackage[T1]{fontenc}
