--- a/lessons/lesson_oop.tex
+++ b/lessons/lesson_oop.tex
@@ -54,7 +54,7 @@ mechanism to stop an unaware programmer from inserting or removing an element fr
 about a circle is mapped by index across three arrays, if an element is removed from one of the lists, all the other elements now have an index
 that is referring to the wrong circle. Figure \ref{fig:out_of_sync_array} shows how a list might become out of sync when an element is removed.
 
-\begin{figure}
+\begin{figure}[h]
     \centering
     \begin{tikzpicture}
         \def\boxgap{+0.053cm}
