Update on Overleaf.

--- a/lessons/dynamic_programming2_week3_2019.tex
+++ b/lessons/dynamic_programming2_week3_2019.tex
@@ -1,7 +1,7 @@
 \documentclass{cspresentation}
 
 \title{Dynamic Programming}
-\subtitle{Part \rom{2}: Introduction}
+\subtitle{Part \rom{2}: Advanced Applications}
 \institute{Stephen Lewis Secondary School}
 \author{Computer Science Club}
 \date{October 23, 2019}
