--- a/lessons/dynamic_programming2_week3_2019.tex
+++ b/lessons/dynamic_programming2_week3_2019.tex
@@ -6,8 +6,123 @@
 \author{Computer Science Club}
 \date{October 23, 2019}
 
+\makeatletter
+\def\blfootnote{\gdef\@thefnmark{}\@footnotetext}
+\makeatother
+
+\DeclareMathOperator{\lortext}{\,\textrm{or}\,}
+
 \begin{document}
 \begin{frame}
 \titlepage
 \end{frame}
+
+\section{Review}
+\subsection{Analysing Dynamic Programs}
+\begin{frame}{Five (easy) steps!}
+    \begin{enumerate}
+        \item \textbf{Define} the subproblemm
+        \item \textbf{Guess} solutions to the subproblem
+        \item \textbf{Relate} the subproblems (i.e. recurrence)
+        \item \textbf{Optimize} the recursive algorithm using memoization or bottom-up
+        \item \textbf{Solve} the final problem
+    \end{enumerate}
+\blfootnote{Source: Demaine, Erik. (2011). \textit{6.006: Introduction to Algorithms}.}
+\end{frame}
+
+\begin{frame}{Fibonacci Numbers}
+    \begin{enumerate}
+        \item \textbf{Define:} $F_k$ for $1 \leq k \leq n$.
+        \item \textbf{Guess:} none
+        \item \textbf{Relate:} $F_n=F_{n-1}+F_{n-2}$ for $n \geq 2$, where $F_1=F_2=1$.
+        \item \textbf{Optimize:} memoization or bottom-up algorithm
+        \item \textbf{Solve:} original problem is $F_n$.
+    \end{enumerate}
+    
+    \textbf{Running time} is $\mathcal{O}(n)$; the \textit{number of subproblems} $(n)$ multiplied by the \textit{time per subproblem} ($\mathcal{O}(1)$ per subproblem).
+\end{frame}
+
+\begin{frame}{In general...}
+    The running time of a dynamic program is
+    \begin{equation*}
+        \Theta\left(\beta(n)\right) + S\cdot\Theta\left(F(k)\right)
+    \end{equation*}
+    where $S$ is the number of subproblems, $\Theta\left(F(k)\right)$ is the time per subproblem, and $\Theta\left(\beta(n)\right)$ is the additional time to compute the final problem.
+\end{frame}
+
+\section{The Pairing Problem}
+\begin{frame}{Problem Description}
+    At a party of $n$ people, a person can talk with another (pair up) or remain single. Each person can only be paired once.\\~\\
+    Determine the number of ways that the $n$ people can remain single or be paired up.
+\end{frame}
+
+\begin{frame}[fragile,allowframebreaks]{Analysis}
+    \begin{enumerate}
+        \item \textbf{Define:} the number of ways to pair $k$ people for $1 \leq k \leq n$.
+        \item \textbf{Guess:} Person $k$ can either remain single or pair up.
+        \item \textbf{Relate:} If $f(k)$ is the number of ways that $k$ people can be paired or single, then $$f(k)=\underbrace{f(k-1)}_{\text{single}}+\underbrace{(k-1)f(k-2)}_{\text{pair up}}$$ for $k>1$, where $f(0)=f(1)=1$.
+        \framebreak
+        \item \textbf{Optimize:}
+\begin{lstlisting}[language=iPython,mathescape=true]
+memo = {}
+def dp(k):
+    # Base cases
+    if k < 0: return 0
+    if k <= 1: return 1
+    
+    # Compute ${\color{ipython_cyan} f(k)}$ and memoize
+    if k in memo: return memo[k]
+    result = dp(k - 1) + (k - 1) * dp(k - 2)
+    memo[k] = result
+    return result
+\end{lstlisting}
+    \item \textbf{Solve:} Compute and print the value of \lstinline[language=iPython]!dp(n)!
+    \end{enumerate}
+\end{frame}
+
+\section{Subset Sum}
+\begin{frame}{Problem Description} 
+    Given an array $A$ of integers, determine whether there exists a subset in $A$ such that the sum of the elements in the subset is equal to $S$.
+\end{frame}
+
+\begin{frame}[fragile,allowframebreaks]{Analysis}
+    \begin{enumerate}
+        \item \textbf{Define:} whether a subset with sum $s$ exists in array $A$.
+        \item \textbf{Guess:} for all items (starting from the back): include the item in the sum \textit{or} exclude the item from the sum.
+        \item \textbf{Relate:} Let $F(n,s)$ indicate whether there is a subset with sum $s$ in the subarray $A_1,\ldots,A_n$: 
+        $$F(n,s)=\underbrace{F(n-1,s-A_n)}_{\text{include $A_n$}}\lortext\underbrace{F(n-1,s)}_{\text{exclude $A_n$}},$$
+        where $F(n,0)$ is true and $F(0,s)$ is false.
+        \framebreak
+        \item \textbf{Optimize}:
+        \begin{itemize}
+            \item In the worst case, we have to check all possible subsets which means that the direct implementation of $F(n,s)$ runs in \textit{exponential time}. \item There are \textbf{no} known polynomial time solutions for this problem.
+        \end{itemize}
+        We achieve a \textit{pseudo-polynomial} time solution using dynamic programming.
+        \framebreak
+\begin{lstlisting}[language=iPython,mathescape=true]
+# Memoized solution
+
+memo = {}
+def dp(n, s):
+    if s == 0: return True
+    if n == 0 and s > 0: return False
+    
+    if (n, s) in memo: return memo[(n, s)]
+    
+    if values[n - 1] > s: result = dp(n - 1, s)
+    else: result = dp(n - 1, s) or dp(n - 1, s - values[n - 1])
+    
+    memo[(n, s)] = result
+    return result
+\end{lstlisting}
+In this case, the memoized solution does \textit{not} have the same running time as a bottom-up approach.\\~\\
+\textbf{Bottom-up approach:}
+\begin{itemize}
+    \item Let $\mathcal{F}(i,j)$ denote whether there exists a subset from $\{A_1,\ldots,A_j\}$ with sum $i$.
+    \item We compute $\mathcal{F}(i,j)$ for all $1 \leq i \leq |A|$ and $1 \leq j \leq S$.
+\end{itemize}
+\item \textbf{Solve}: Print the value of $\mathcal{F}\left(S,|A|\right)$.
+    \end{enumerate}
+\end{frame}
+
 \end{document}
